# garagenflohmarkt2.0

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  schema.sql
.github/workflows/: add-to-project.yml  deploy-backend.yml  deploy-frontend.yml
app/: auth.py  database.py  email.py  geocode.py  main.py
app/routes/: stands.py
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.tsx  style.css  types.ts  ui.tsx
frontend/src/components/: admin-panel.tsx  faq.tsx  flohmarkt-app.tsx  flohmarkt-map.tsx  impressum.tsx  mein-stand.tsx  stand-form.tsx  stand-liste.tsx
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
